Production/Platform_V2/alarm_v2/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alarm-v2-service
  namespace: terrestrialplatform-v2
spec:
  selector:
    app: alarm-v2-app
  ports:
    - protocol: "TCP"
      port: 8033
      targetPort: 8080
  type: ClusterIP
