Production/Platform_V2/alarm_v2/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alarm-v2-ingress
  namespace: terrestrialplatform-v2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: cat.terrestrialplatform.link
      http:
        paths:
          - path: /alarm2/(.*)
            pathType: Prefix

            backend:

              service:

                name: alarm-v2-service

                port:

                  number: 8033
